// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should display headers when headers are passed in 1`] = `
<div
  className="autocomplete"
>
  <div
    className="wrapper"
    style={
      Object {
        "--formField-maxLength": undefined,
      }
    }
  >
    <label
      className="label"
      htmlFor="123e4567-e89b-12d3-a456-426655440014"
    >
      placeholder_name
    </label>
    <input
      autoComplete="autocomplete-off"
      className="formField"
      id="123e4567-e89b-12d3-a456-426655440014"
      name="generatedName--123e4567-e89b-12d3-a456-426655440014"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      type="text"
    />
  </div>
</div>
`;

exports[`renders an Autocomplete 1`] = `
<div
  className="autocomplete"
>
  <div
    className="wrapper"
    style={
      Object {
        "--formField-maxLength": undefined,
      }
    }
  >
    <label
      className="label"
      htmlFor="123e4567-e89b-12d3-a456-426655440001"
    >
      placeholder_name
    </label>
    <input
      autoComplete="autocomplete-off"
      className="formField"
      id="123e4567-e89b-12d3-a456-426655440001"
      name="generatedName--123e4567-e89b-12d3-a456-426655440001"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      type="text"
    />
  </div>
</div>
`;
